sei nem o que mais estou comitando

--- a/inicio.html
+++ b/inicio.html
@@ -88,24 +88,21 @@
             <div class="footer-main">
 
                 <div class="footer-left">
-                    <a href="#">RicardoEvangelista</a>
-                    <a href="#">Quezia</a>
-                    <a href="#">Gabriel Henrique</a>
-                    <a href="#">Sarah</a>
                     <a href="#">Pedro</a>
+                    <a href="#">Sarah Cristina</a>
+                    <a href="#">Gabriel Henrique</a>
+                    <a href="#">Quezia dos Santos</a>
+                    <a href="#">Ricardo Evangelista</a>
                 </div>
                 <div class="div-line"></div>
 
                 <div class="footer-center">
                     <section class="footerC-instagram">
                         <img  class="icon-footer" src="./img/icons/instagram_icon.svg" alt="icone do instargram">
-                        <a href="https://www.instagram.com/rickesantos007/">@rickesantos007</a>
-                        <a href="#">Quezia</a>
-                        <a href="#">Gabriel Henrique</a>
-                        <a href="#">Sarah</a>
-                        <a href="#">Pedro</a>
+                        <a href="https://www.instagram.com/rickesantos007/">@profissionalize_se1</a>
+
                     </section>
-                    <section class="footerC-linkedin">
+                    <!-- <section class="footerC-linkedin">
                         <img class="icon-footer" src="./img/icons/linkedin_icon.svg" alt="icone do Linkedin">
                         <a href="www.linkedin.com/in/ricardo-evangelista777/">ricardo-evangelista777</a>
                         <a href="#">Quezia</a>
@@ -120,7 +117,7 @@
                         <a href="https://github.com/GabryelHenryque">GabryelHenryque</a>
                         <a href="https://github.com/sarahcrispro">sarahcrispro</a>
                         <a href="https://github.com/pedrosantos252">pedrosantos252</a>
-                    </section>
+                    </section> -->
                 </div>
                 <div class="div-line"></div>
 
@@ -131,9 +128,10 @@
                 </div>
             </div> 
             <div class="footer-bottom">
+                <div class="bottom-line"></div>
                 <p>© Copyright - Todos os direitos reservados a Profissionalize-se. 2024</p>
             </div>
         </footer> 
 
 </body>
- </html>
+</html>
