--- a/perfil.html
+++ b/perfil.html
@@ -11,7 +11,7 @@
         <a class="return" draggable="false" href="./vagas.html"><img draggable="false" src="img/icons/return_icon.svg" alt="botão para voltar"/></a>
         <div class="div-main">
             <section class="section-1">
-                <div  class="img-radion" src="img/background/JuninGamePrayPicaDasGalaxias.svg" alt="imagem de perfil"></div>
+                <div  class="img-radion" src="./css/img-background/icone_1.svg" alt="imagem de perfil"></div>
             </section>
             <section class="section-2">
                 <div class="sec2-top">
@@ -30,23 +30,23 @@
                         </div>
                         <div class="quests-profire">
                             <section class="quest">
-                                <a href="#"><img src="css/img-background/JuninGamePrayPicaDasGalaxias.svg" alt="imagem das questoes"></a>
+                                <a href="#"><img src="css/img-background/icone_1.svg" alt="imagem das questoes"></a>
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
-                                <a href="#"><img src="css/img-background/JuninGamePrayPicaDasGalaxias.svg" alt="imagem das questoes"></a>
+                                <a href="#"><img src="css/img-background/icone_1.svg" alt="imagem das questoes"></a>
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
-                                <a href="#"><img src="css/img-background/JuninGamePrayPicaDasGalaxias.svg" alt="imagem das questoes"></a>
+                                <a href="#"><img src="css/img-background/icone_1.svg" alt="imagem das questoes"></a>
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
-                                <a href="#"><img src="css/img-background/student-L02008023668.svg" alt="imagem das questoes"></a>
+                                <a href="#"><img src="css/img-background/icone_1.svg" alt="imagem das questoes"></a>
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
-                                <a href="#"><img src="css/img-background/JuninGamePrayPicaDasGalaxias.svg" alt="imagem das questoes"></a>
+                                <a href="#"><img src="css/img-background/icone_1.svg" alt="imagem das questoes"></a>
                                 <span id="percentage_1"></span>%
                             </section>
                         </div>
@@ -76,11 +76,11 @@
                                     <label>E-mail de Contato: </label><span class="email-text">email</span><br>
                                 </form>
                             </div>
-                            <div class="contact-socialMedia">
+                            <!-- <div class="contact-socialMedia">
                                 <a href="#"><img src="./img/icons/instagram_icon.svg" alt="instagram"></a>
                                 <a href="#"><img src="./img/icons/linkedin_icon.svg" alt="linkedin"></a>
                                 <a href="#"><img src="./img/icons/github_icon.svg" alt="github"></a>
-                            </div>
+                            </div> -->
                     </div>
                 </div>
 
