--- a/login.html
+++ b/login.html
@@ -23,11 +23,11 @@
                     <form>
                         <div class="form">
                             <label>E-mail/CPF:</label>
-                            <input type="email"  alt="digite o seu e-mail ou CPF"><br>
+                            <input type="email" id="email" alt="digite o seu e-mail ou CPF"><br>
                         </div>
                         <div class="form">
                             <label>Senha:</label>
-                            <input type="password" alt="Digite a sua senha">
+                            <input type="password" id="senha" alt="Digite a sua senha">
                         </div>
                      </form>
                      <div class="link-redefinir">
@@ -35,13 +35,12 @@
                      </div>
                     
                 </div>
-
                 <div class="table-down">
-                    <button><a href="vagas.html"> Entrar</a></button><br>
+                    <button id="login">Entrar</button><br>
                     <a draggable="false" href="./cadastro.html">Cadastre-se</a>
                 </div>
-
         </section>
      </main>
+     <script src="js/login.js"></script>
 </body>
 </html>
