--- a/cadastro.html
+++ b/cadastro.html
@@ -21,19 +21,19 @@
                     <form>
                         <div class="form">
                             <label>Nome Completo:</label>
-                            <input type="text" alt="digite o seu nome completo" required><br>
+                            <input type="text" id="nome-cadastro" alt="digite o seu nome completo" required><br>
                         </div>
                         <div class="form">
                             <label>E-mail:</label>
-                            <input type="email"  alt="digite o seu e-mail ou CPF" required><br>
+                            <input type="email" id="email-cadastro" alt="digite o seu e-mail ou CPF" required><br>
                         </div>
                         <div class="form">
                             <label>CPF:</label>
-                            <input type="text" maxlength="14" required><br>
+                            <input type="text" id="cpf-cadastro" maxlength="11" required><br>
                         </div>
                         <div class="form">
                             <label>Senha:</label>
-                            <input type="password" alt="Digite o sua senha" required><br>
+                            <input type="password" id="senha-cadastro" alt="Digite o sua senha" required><br>
                         </div>
                         <div class="form">
                             <label>Confirmar Senha:</label>
@@ -53,12 +53,12 @@
                             <label>Aceito os Termos de Uso</label><br>
                         </div>
                     </div>
-                    <button>Cadastrar</button><br>
-
+                    <button id="registrar">Cadastrar</button><br>
                     <a draggable="false" href="./login.html">Logar</a>
                 </div>
                 
         </section>
      </main>
+     <script src="js/login.js"></script>
 </body>
 </html>
