--- a/inicio.html
+++ b/inicio.html
@@ -75,7 +75,7 @@
             </div>
             <div class="sec3-bottom">
                 <a href="#section-1">
-                    <img src="./img/icons/return_icon.svg" alt="ícone de voltar">
+                    <img src="./img/icons/returnSpeed.svg" alt="ícone de voltar">
                 </a>
                 
             </div>
