--- a/cadastro.html
+++ b/cadastro.html
@@ -59,6 +59,6 @@
                 
         </section>
      </main>
-     <script src="js/login.js"></script>
+     <script src="js/cadastro.js"></script>
 </body>
 </html>
