--- a/inicio.html
+++ b/inicio.html
@@ -99,7 +99,7 @@
                 <div class="footer-center">
                     <section class="footerC-instagram">
                         <img  class="icon-footer" src="./img/icons/instagram_icon.svg" alt="icone do instargram">
-                        <a href="https://www.instagram.com/rickesantos007/">@profissionalize_se1</a>
+                        <a href="https://www.instagram.com/profissionalize_se1/">@profissionalize_se1</a>
 
                     </section>
                     <!-- <section class="footerC-linkedin">
