Adicionando verificações no Login e Cadastro além de corrigir pequenos defeitos no site.

--- a/chatbot.html
+++ b/chatbot.html
@@ -34,7 +34,7 @@
                     <div class="bot-avatar">
                         <img class="bot-avatar" src="./img/icons/juju.jpeg" width="50" height="50" alt="icone da juju">
                     </div> 
-                    <div class="message-text">Olá, eu sou a Juju<br>
+                    <div class="message-text">Olá, eu sou a Juju!<br>
                     Em que posso ajudar?</div>
                 </div>
             </div>
