--- a/cadastro.html
+++ b/cadastro.html
@@ -13,51 +13,48 @@
             <h1>Profissional<span></span></h1>
         </section>
         <section class="section-right">
-
-                <div class="table-up">
-                    <h2>Registrar-se</h2>
-                </div>
-                <div class="table-center">
-                    <form>
-                        <div class="form">
-                            <label>Nome Completo:</label>
-                            <input type="text" id="nome-cadastro" alt="digite o seu nome completo" required><br>
-                        </div>
-                        <div class="form">
-                            <label>E-mail:</label>
-                            <input type="email" id="email-cadastro" alt="digite o seu e-mail ou CPF" required><br>
-                        </div>
-                        <div class="form">
-                            <label>CPF:</label>
-                            <input type="text" id="cpf-cadastro" maxlength="11" required><br>
-                        </div>
-                        <div class="form">
-                            <label>Senha:</label>
-                            <input type="password" id="senha-cadastro" alt="Digite o sua senha" required><br>
-                        </div>
-                        <div class="form">
-                            <label>Confirmar Senha:</label>
-                            <input type="password" alt="Digite novamente sua senha" required><br>
-                        </div>
-                     </form>
-                </div>
-
-                <div class="table-down">
-                    <div class="terms">
-                        <div class="input-terms">
-                            <input type="checkbox" required>
-                            <label>Aceito as Politicas de Privacidade</label><br>
-                        </div>
-                        <div class="input-terms">
-                            <input type="checkbox" required>
-                            <label>Aceito os Termos de Uso</label><br>
-                        </div>
+            <div class="table-up">
+                <h2>Registrar-se a</h2>
+            </div>
+            <div class="table-center">
+                <form>
+                    <div class="form">
+                        <label for="nome-cadastro">Nome Completo:</label>
+                        <input type="text" id="nome-cadastro" alt="digite o seu nome completo" maxlength="60" required><br>
                     </div>
-                    <button id="registrar">Cadastrar</button><br>
-                    <a draggable="false" href="./login.html">Logar</a>
-                </div>
-                
-        </section>
+                    <div class="form">
+                        <label for="email-cadastro">E-mail:</label>
+                        <input type="email" id="email-cadastro" alt="digite o seu e-mail ou CPF" minlength="6" maxlength="60" required><br>
+                    </div>
+                    <div class="form">
+                        <label for="cpf-cadastro">CPF:</label>
+                        <input type="text" id="cpf-cadastro" maxlength="11" required><br>
+                    </div>
+                    <div class="form">
+                        <label for="senha-cadastro">Senha:</label>
+                        <input type="password" id="senha-cadastro" alt="Digite o sua senha" minlength="6" maxlength="20" required><br>
+                    </div>
+                    <div class="form">
+                        <label for="senha-confirmada">Confirmar Senha:</label>
+                        <input type="password" id="senha-confirmada" alt="Digite novamente sua senha" minlength="6" maxlength="20" required><br>
+                    </div>
+                    <div class="table-down">
+                        <div class="terms">
+                            <div class="input-terms">
+                                <input type="checkbox" id="termos-privacidade" required>
+                                <label for="termos-privacidade">Eu li e aceito as <a href="#" class="terms-link">Políticas de Privacidade</a></label>
+                            </div>
+                            <div class="input-terms">
+                                <input type="checkbox" id="termos-uso" required>
+                                <label for="termos-uso">Eu li e aceito os <a href="#" class="terms-link">Termos de Uso</a></label>
+                            </div>
+                        </div>
+                        <button type="submit" id="registrar">Cadastrar</button><br>
+                        <a href="./login.html" class="link-login">Já tenho conta, fazer login</a>
+                    </div>
+                </form>
+            </div>
+        </section>        
      </main>
      <script src="js/cadastro.js"></script>
 </body>
