perfil css,html 85%   e js 10%

--- a/login.html
+++ b/login.html
@@ -23,11 +23,11 @@
                     <form>
                         <div class="form">
                             <label>E-mail/CPF:</label>
-                            <input type="email" id="email" alt="digite o seu e-mail ou CPF"><br>
+                            <input type="email" id="email" alt="digite o seu e-mail ou CPF" required><br>
                         </div>
                         <div class="form">
                             <label>Senha:</label>
-                            <input type="password" id="senha" alt="Digite a sua senha">
+                            <input type="password" id="senha" alt="Digite a sua senha" required>
                         </div>
                      </form>
                      <div class="link-redefinir">
