--- a/vagas.html
+++ b/vagas.html
@@ -35,21 +35,24 @@
   </header>
   <main>
 
-    <section class="section-tinder">         
+    <section class="section-tinder" id="sec_tinder">         
  
-      <input type="radio" name="position" id="Cradio_1" checked />
-      <input type="radio" name="position" id="Cradio_2" />
+      <input type="radio" name="position" id="Cradio_1"/>
+      <input type="radio" name="position" id="Cradio_2 " "/>
       <input type="radio" name="position" id="Cradio_3"/>
+
+
       <div class="carousel-button">
         <button id="arrow_left" onclick="arrowLeft()"><img src="./img/icons/arrow_left.svg" alt=""></button>
         <button id="arrow_star"><img src="./img/icons/favoriteStar_icon.svg" alt=""></button>
         <button id="arrow_right" onclick="arrowRight()"><img src="./img/icons/arrow_right.svg" alt=""></button>
       </div> 
       <main id="carousel">
-        <div class="item"></div>
-        <div class="item"></div>
-        <div class="item"></div>
-        
+        <div class="item" ></div>
+        <div class="item"   ></div>
+        <div class="item" ></div>
+
+
       <main>
     </section>
     <section class="section-search ">
