algums erros corrigidos...

--- a/inicio.html
+++ b/inicio.html
@@ -8,6 +8,12 @@
     <title>Inicio Profissionalize-se</title>
  </head>
  <body>
+    
+        <!-- <div class="returnTop">
+            <a href="#section-1">
+                  <img src="./img/icons/returnSpeed.svg" alt="ícone de voltar">
+            </a>
+        </div>  -->
         <section class="section-1" id="section-1">
             <div class="box-blur">
                 <h1>Profissionalize-se</h1>
@@ -70,7 +76,7 @@
                     </h3>
                 </div>
                 <div class="sec3-right">
-                    <img src="./img/background/student.svg" alt="imagem de nois">
+                    <img src="./css/img-background/student.svg" alt="imagem de nois">
                 </div>
             </div>
             <div class="sec3-bottom">
@@ -99,7 +105,7 @@
                 <div class="footer-center">
                     <section class="footerC-instagram">
                         <img  class="icon-footer" src="./img/icons/instagram_icon.svg" alt="icone do instargram">
-                        <a href="https://www.instagram.com/profissionalize_se1/">@profissionalize_se1</a>
+                        <a href="https://www.instagram.com/profissionalize_se1/" target="_blank">@profissionalize_se1</a>
 
                     </section>
                     <!-- <section class="footerC-linkedin">
