--- a/perfil.html
+++ b/perfil.html
@@ -11,7 +11,7 @@
 
     <main id="main">
 
-        <a class="return" draggable="false" href="./vagas.html"><img draggable="false" src="img/icons/return_icon.svg" alt="botão para voltar"/></a>
+        <a class="return" draggable="false" href="vaga.html"><img draggable="false" src="img/icons/return_icon.svg" alt="botão para voltar"/></a>
         <div class="div-main ">
            
 
