--- a/redefinir.html
+++ b/redefinir.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <section class="section-up">
-            <h1>Profissional<span></span></h1>
+            <h1>Profissionalize-se<span></span></h1>
         </section>
         <section class="section-bottom">
             
