--- a/cadastro.html
+++ b/cadastro.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <main>
+        <a class="return" draggable="false" href="./login.html"><img draggable="false" src="img/icons/return_icon.svg" alt="botão para voltar"/></a>
         <section class="section-left">
             <h1>Profissional<span></span></h1>
         </section>
@@ -20,33 +21,33 @@
                 <form>
                     <div class="form">
                         <label for="nome-cadastro">Nome Completo:</label>
-                        <input type="text" id="nome-cadastro" alt="digite o seu nome completo" maxlength="60" required><br>
+                        <input class="form-input" type="text" id="nome-cadastro" alt="digite o seu nome completo" maxlength="60" required><br>
                     </div>
                     <div class="form">
                         <label for="email-cadastro">E-mail:</label>
-                        <input type="email" id="email-cadastro" alt="digite o seu e-mail ou CPF" minlength="6" maxlength="60" required><br>
+                        <input class="form-input" type="email" id="email-cadastro" alt="digite o seu e-mail ou CPF" minlength="6" maxlength="60" required><br>
                     </div>
                     <div class="form">
                         <label for="cpf-cadastro">CPF:</label>
-                        <input type="text" id="cpf-cadastro" maxlength="11" required><br>
+                        <input class="form-input" type="text" id="cpf-cadastro" maxlength="11" required><br>
                     </div>
                     <div class="form">
                         <label for="senha-cadastro">Senha:</label>
-                        <input type="password" id="senha-cadastro" alt="Digite o sua senha" minlength="6" maxlength="20" required><br>
+                        <input class="form-input" type="password" id="senha-cadastro" alt="Digite o sua senha" minlength="6" maxlength="20" required><br>
                     </div>
                     <div class="form">
                         <label for="senha-confirmada">Confirmar Senha:</label>
-                        <input type="password" id="senha-confirmada" alt="Digite novamente sua senha" minlength="6" maxlength="20" required><br>
+                        <input class="form-input" type="password" id="senha-confirmada" alt="Digite novamente sua senha" minlength="6" maxlength="20" required><br>
                     </div>
                     <div class="table-down">
                         <div class="terms">
                             <div class="input-terms">
                                 <input type="checkbox" id="termos-privacidade" required>
-                                <label for="termos-privacidade">Eu li e aceito as <a href="#" class="terms-link">Políticas de Privacidade</a></label>
+                                <a href="#" class="terms-link">Eu li e aceito as Políticas de Privacidade</a>
                             </div>
                             <div class="input-terms">
                                 <input type="checkbox" id="termos-uso" required>
-                                <label for="termos-uso">Eu li e aceito os <a href="#" class="terms-link">Termos de Uso</a></label>
+                                <a href="#" class="terms-link">Eu li e aceito os Termos de Uso</a>
                             </div>
                         </div>
                         <button type="submit" id="registrar">Cadastrar</button><br>
