--- a/cadastro.html
+++ b/cadastro.html
@@ -15,7 +15,7 @@
         </section>
         <section class="section-right">
             <div class="table-up">
-                <h2>Registrar-se a</h2>
+                <h2>Registrar-se</h2>
             </div>
             <div class="table-center">
                 <form>
