--- a/inicio.html
+++ b/inicio.html
@@ -94,8 +94,8 @@
             <div class="footer-main">
 
                 <div class="footer-left">
-                    <a href="#">Pedro</a>
                     <a href="#">Sarah Cristina</a>
+                    <a href="#">Pedro Emanoel</a>
                     <a href="#">Gabriel Henrique</a>
                     <a href="#">Quezia dos Santos</a>
                     <a href="#">Ricardo Evangelista</a>
@@ -105,8 +105,12 @@
                 <div class="footer-center">
                     <section class="footerC-instagram">
                         <img  class="icon-footer" src="./img/icons/instagram_icon.svg" alt="icone do instargram">
-                        <a href="https://www.instagram.com/profissionalize_se1/" target="_blank">@profissionalize_se1</a>
-
+                    </section>
+                    <section class="footerC-github">
+                        <img  class="icon-footer" src="./img/icons/Cópia de p (4) 1.svg" style="width: 100px;" alt="icone do instargram">
+                    </section>
+                    <section class="footerC-linkedin">
+                        <img  class="icon-footer" src="./img/icons/gmail_icon.svg" alt="icone do instargram">
                     </section>
                     <!-- <section class="footerC-linkedin">
                         <img class="icon-footer" src="./img/icons/linkedin_icon.svg" alt="icone do Linkedin">
