--- a/inicio.html
+++ b/inicio.html
@@ -94,29 +94,31 @@
             <div class="footer-main">
 
                 <div class="footer-left">
-                    <a href="#">Sarah Cristina</a>
-                    <a href="#">Pedro Emanoel</a>
-                    <a href="#">Gabriel Henrique</a>
-                    <a href="#">Quezia dos Santos</a>
-                    <a href="#">Ricardo Evangelista</a>
+                    <a href="https://github.com/sarahcrispro" class="a" draggable="false" target="_blank">Sarah Cristina</a>
+                    <a href="https://github.com/pedrosantos252" class="a" draggable="false" target="_blank">Pedro Emanoel</a>
+                    <a href="https://github.com/GabryelHenryque/" class="a" draggable="false" target="_blank">Gabriel Henrique</a>
+                    <a href="https://github.com/queziaqsp" class="a" draggable="false" target="_blank">Quezia dos Santos</a>
+                    <a href="https://github.com/RicardoEvangelistaDosSantos" class="a" draggable="false" target="_blank">Ricardo Evangelista</a>
                 </div>
                 <div class="div-line"></div>
 
                 <div class="footer-center">
                     <section class="footerC-instagram">
-                        <img  class="icon-footer" src="./img/icons/instagram_icon.svg" alt="icone do instargram">
+                       <a href="https://www.instagram.com/profissionalize_se1/" draggable="false" target="_blank"><img class="icon-footer" src="./img/icons/instagram_icon.svg" style="width: 65px;" alt="icone do instargram"></a>
                     </section>
                     <section class="footerC-github">
-                        <img  class="icon-footer" src="./img/icons/Cópia de p (4) 1.svg" style="width: 100px;" alt="icone do instargram">
+                       <a href="#" draggable="false" target="_blank"><img  class="icon-footer" src="./css/img-background/icone_2.svg" style="width: 100px;" alt="icone da logo da empresa"></a> 
                     </section>
                     <section class="footerC-linkedin">
-                        <img  class="icon-footer" src="./img/icons/gmail_icon.svg" alt="icone do instargram">
+                        <a href="mailto:profissionalizeseofc@gmail.com" draggable="false">
+                            <img class="icon-footer" src="./img/icons/gmail_icon.svg" style="width: 65px;" alt="icone do gmail">
+                          </a>
                     </section>
                     <!-- <section class="footerC-linkedin">
                         <img class="icon-footer" src="./img/icons/linkedin_icon.svg" alt="icone do Linkedin">
                         <a href="www.linkedin.com/in/ricardo-evangelista777/">ricardo-evangelista777</a>
                         <a href="#">Quezia</a>
-                        <a href="www.linkedin.com/in/gabriel-henrique-a61769271">Gabriel Henrique</a>
+                        <a href=" "www.linkedin.com/in/gabriel-henrique-a61769271">Gabriel Henrique</a>
                         <a href="#">Sarah</a>
                         <a href="#">Pedro</a>
                     </section>
@@ -131,10 +133,10 @@
                 </div>
                 <div class="div-line"></div>
 
-                <div class="footer-right">
-                    <a href="#">Temos de Uso</a>
-                    <a href="#">Politica De Privacidade</a>
-                    <a href="# ">Falar com nosso chatBot</a>
+                <div class="footer-right ">
+                    <a class="a" href="#" draggable="false">Temos de Uso</a>
+                    <a class="a" href="#" draggable="false">Politica De Privacidade</a>
+                    <a class="a" href="#" draggable="false">Falar com nosso chatBot</a>
                 </div>
             </div> 
             <div class="footer-bottom">
