minha cabeça ta doendo

--- a/vaga.html
+++ b/vaga.html
@@ -87,7 +87,7 @@
     <section id="section-vaga">
     </section>
     <div class="container-vaga">
-      <div class="vaga">
+      <div class="vaga" tabindex="-1">
           <div class="header-vaga">
               <div>
                 <h4>${vaga.empresa}</h4>
@@ -100,10 +100,10 @@
               
           </div>
           <div class="body-vaga">
-              <p>${vaga.descricao}</p>
+              <p >adsfsdfadskjfpalsdhfghgjkghkgkgkhjkbpjbfnpasdnfejwnpfabnsjfbaspfnjasnpfndfpauvhibgrbqbjbalkgbbvpasbfjpasdbfbapv aph wef aphsdfbaeasnfpaewbnfpawebjbeaanfepanfpefnagmbpranpvnásknfpaeiuenjkfbgabsdgnjsfdbgofsbgjsfbgpisbgmrebpibjb dgfhgdfhfdghfghdfhgfghdfghfghdfghdtrhfghtdht dthdtfhdfgdhdtrdghtdfhtdhtdfgdhdtdsdrg </p><!--${vaga.descricao}-->
           </div>
           <div class="footer-vaga">
-              <a href="${vaga.url_vaga}" target="_blank">Entrar na vaga</a> 
+             <a href="${vaga.url_vaga}" target="_blank">Entrar na vaga</a><!--Entrar na vaga--> 
           </div>
       </div>
       <span>Ver mais detalhes</span>
