--- a/perfil.html
+++ b/perfil.html
@@ -70,25 +70,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="sec2-bottom">
-                    <div class="form-right">
-                        <h3>Informações de Contato:</h3>
-                        <div class="contact-profire">
-                            <form>
-                                <label>Nome completo: </label>
-                                <span class="nickname-text">nickname</span><br>
-                                <label>Telefone de Contato: </label>
-                                <span class="phone-text">telefone</span><br>
-                                <label>E-mail de Contato: </label>
-                                <span class="email-text">email</span><br>
-                            </form>
-                        </div>
-                    </div>
-                </div>
             </section>
             <section class="section-3" style="display: none;">
                 <h1>Formulário de Cadastro</h1>
-                <form id="form-perfil">
+                <form id="form-perfil" enctype="multipart/form-data">
 
                     <div class="container">
 
@@ -118,7 +103,7 @@
                         </div>
                         <div class="item-7">
                             <div class="select">
-                                <select class="input-form" id="escolaridade" name="escolaridade" required>
+                                <select class="input-form" id="formacao" name="formacao" required>
                                     <option value="">Selecione a sua Escolaridade</option>
                                     <option value="fundamental-incompleto">Ensino Fundamental Incompleto</option>
                                     <option value="fundamental-completo">Ensino Fundamental Completo</option>
