--- a/perfil.html
+++ b/perfil.html
@@ -44,7 +44,7 @@
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
-                                <a href="#">
+                                <a href="./testevoc.html">
                                     <img src="css/img-background/icone_1.svg" alt="imagem das questoes">
                                 </a>
                                 <span id="percentage_1"></span>%
@@ -56,7 +56,7 @@
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
-                                <a href="#">
+                                <a href="./testeComportamental.html">
                                     <img src="css/img-background/icone_1.svg" alt="imagem das questoes">
                                 </a>
                                 <span id="percentage_1"></span>%
