algumas coisas adicionadas

--- a/inicio.html
+++ b/inicio.html
@@ -101,42 +101,26 @@
                     <a href="https://github.com/RicardoEvangelistaDosSantos" class="a" draggable="false" target="_blank">Ricardo Evangelista</a>
                 </div>
                 <div class="div-line"></div>
-
+                
                 <div class="footer-center">
                     <section class="footerC-instagram">
                        <a href="https://www.instagram.com/profissionalize_se1/" draggable="false" target="_blank"><img class="icon-footer" src="./img/icons/instagram_icon.svg" style="width: 65px;" alt="icone do instargram"></a>
                     </section>
                     <section class="footerC-github">
-                       <a href="#" draggable="false" target="_blank"><img  class="icon-footer" src="./css/img-background/icone_2.svg" style="width: 100px;" alt="icone da logo da empresa"></a> 
+                       <a href="https://github.com/RicardoEvangelistaDosSantos/Profissionalize-se?tab=readme-ov-file#profissionalize-se" draggable="false" target="_blank"><img  class="icon-footer" src="./css/img-background/icone_2.svg" style="width: 100px;" alt="icone da logo da empresa"></a> 
                     </section>
                     <section class="footerC-linkedin">
                         <a href="mailto:profissionalizeseofc@gmail.com" draggable="false">
                             <img class="icon-footer" src="./img/icons/gmail_icon.svg" style="width: 65px;" alt="icone do gmail">
                           </a>
                     </section>
-                    <!-- <section class="footerC-linkedin">
-                        <img class="icon-footer" src="./img/icons/linkedin_icon.svg" alt="icone do Linkedin">
-                        <a href="www.linkedin.com/in/ricardo-evangelista777/">ricardo-evangelista777</a>
-                        <a href="#">Quezia</a>
-                        <a href=" "www.linkedin.com/in/gabriel-henrique-a61769271">Gabriel Henrique</a>
-                        <a href="#">Sarah</a>
-                        <a href="#">Pedro</a>
-                    </section>
-                    <section class="footerC-github">
-                        <img class="icon-footer" src="./img/icons/github_icon.svg" alt="icone do github">
-                        <a href="https://github.com/RicardoEvangelistaDosSantos">RicardoEvangelistaDosSantos</a>
-                        <a href="https://github.com/queziaqsp">queziaqsp</a>
-                        <a href="https://github.com/GabryelHenryque">GabryelHenryque</a>
-                        <a href="https://github.com/sarahcrispro">sarahcrispro</a>
-                        <a href="https://github.com/pedrosantos252">pedrosantos252</a>
-                    </section> -->
                 </div>
                 <div class="div-line"></div>
 
                 <div class="footer-right ">
-                    <a class="a" href="#" draggable="false">Temos de Uso</a>
-                    <a class="a" href="#" draggable="false">Politica De Privacidade</a>
-                    <a class="a" href="#" draggable="false">Falar com nosso chatBot</a>
+                    <a class="a" href="./termouso.html" draggable="false">Temos de Uso</a>
+                    <a class="a" href="./politica.html" draggable="false">Politica De Privacidade</a>
+                    <!-- <a class="a" href="#" draggable="false">Falar com nosso chatBot</a> -->
                 </div>
             </div> 
             <div class="footer-bottom">
