--- a/politica.html
+++ b/politica.html
@@ -7,6 +7,9 @@
     <title>Política de Privacidade</title>
 </head>
 <body>
+    <a class="return" draggable="false" onclick="window.history.back()">
+        <img draggable="false" src="img/icons/return_icon.svg" alt="botão para voltar" />
+    </a>
     <h1>POLÍTICA DE PRIVACIDADE</h1>
     <p>
         Nossa missão é conectar candidatos do mundo todo com as empresas que utilizam o nosso sistema para divulgação e gerenciamento de seus processos seletivos.
