--- a/termouso.html
+++ b/termouso.html
@@ -7,6 +7,9 @@
     <title>Termos de Uso</title>
 </head>
 <body>
+    <a class="return" draggable="false" onclick="window.history.back()">
+        <img draggable="false" src="img/icons/return_icon.svg" alt="botão para voltar" />
+    </a>
     <div class="section">
         <p>O idioma da versão original deste acordo é o português (BRASIL). Na medida em que qualquer versão traduzida deste acordo conflitar com a versão em português, esta versão prevalecerá.</p>
 
