--- a/inicio.html
+++ b/inicio.html
@@ -55,7 +55,7 @@
                         </div>
                         <div class="backend">
                             <h3>Feedback</h3>
-                            <p>um texto aguardando...</p> 
+                            <p>Gostaria de parabenizar o Profissionalize-se pelo excelente trabalho em conectar candidatos a oportunidades de emprego. A plataforma é intuitiva, fácil de navegar e oferece diversas funcionalidades que tornam a busca por vagas muito mais eficiente.  Além disso, as descrições das vagas são completas e detalhadas, o que ajuda bastante na tomada de decisão. Super recomendo!</p> 
                         </div>
                     </div>
                 </div>
