carrossel sem informação update

--- a/vaga.html
+++ b/vaga.html
@@ -48,9 +48,12 @@
       </div> 
       
       <main id="carousel">
-        <div class="item"></div>
+
+ 
+      </div>
         <div class="item" id="section_vaga_recomendada_1"></div>
         <div class="item" id="section_vaga_recomendada_2"></div>
+        <div class="item" id="section_vaga_recomendada_3"></div>
 
       <main>
     
