update feedback  design

--- a/inicio.html
+++ b/inicio.html
@@ -29,7 +29,7 @@
                 <div class="card">
                     <div class="flip">
                         <div class="card-1 frondend">
-                            <h3>Nome</h3>
+                            <h3>Sarah Cristina</h3>
                         </div>
                         <div class="backend">
                             <h3>Feedback</h3>
@@ -40,7 +40,7 @@
                 <div class="card">
                     <div class="flip">
                         <div class="card-2  frondend">
-                            <h3>Nome</h3>
+                            <h3>Pedro Emanoel</h3>
                         </div>
                         <div class="backend">
                             <h3>Feedback</h3>
@@ -51,7 +51,7 @@
                 <div class="card">
                     <div class="flip">
                         <div class=" card-3 frondend">
-                            <h3>Nome</h3>
+                            <h3>Quezia dos Santos</h3>
                         </div>
                         <div class="backend">
                             <h3>Feedback</h3>
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="sec2-bottom">
-                <p class="sec2-text"><span id="user_length">user_length</span> Pessoas que tambem fazem partes</p>
+                <p class="sec2-text"><span id="user_length"><!--user_length-->1739</span> Pessoas que tambem fazem partes</p>
             </div>
         </section>
         <section class="section-3">
@@ -76,7 +76,7 @@
                     </h3>
                 </div>
                 <div class="sec3-right">
-                    <img src="./css/img-background/student.svg" alt="imagem de nois">
+                    <img src="./css/img-background/students.svg" alt="imagem de nois">
                 </div>
             </div>
             <div class="sec3-bottom">
