--- a/perfil.html
+++ b/perfil.html
@@ -10,10 +10,25 @@
 </head>
 
 <body>
-    <main id="main">
-        <a class="return" draggable="false" href="vaga.html" onclick="window.history.back()">
+    <header>
+        <a class="return" draggable="false" href="./vaga.html" >
             <img draggable="false" src="img/icons/return_icon.svg" alt="botão para voltar" />
         </a>
+         <!--navegação - NAV-->
+        <div class="navbar-box">
+            <nav class="navbar">
+            <div class="navbar-container">
+                <div class="navbar-links">
+                <a class="nav-link" href="./inicio.html">Inicio</a>
+                <a class="nav-link" href="./vaga.html">Vagas</a>
+                <a class="nav-link active" href="./perfil.html">Perfil</a>
+                </div>
+            </div>
+            </nav>
+        </div>
+    </header>
+    <main id="main">
+       
         <div class="div-main">
             <section class="section-1">
                 <span class="picture_image"></span>
@@ -39,7 +54,7 @@
                         <div class="quests-profire">
                             <section class="quest">
                                 <a href="#">
-                                    <img src="css/img-background/icone_1.svg" alt="imagem das questoes">
+                                    <img src="css/img-background/ingles.svg" alt="imagem das questoes">
                                 </a>
                                 <span id="percentage_1"></span>%
                             </section>
@@ -57,13 +72,13 @@
                             </section>
                             <section class="quest">
                                 <a href="./testeComportamental.html">
-                                    <img src="./img/icons/Comportamental_icon.svg" alt="imagem das questoes">
+                                    <img src="./img/icons/coportamental.svg" alt="imagem das questoes">
                                 </a>
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
                                 <a href="#">
-                                    <img src="css/img-background/icone_1.svg" alt="imagem das questoes">
+                                    <img src="./img/icons/teste.svg" alt="imagem das questoes">
                                 </a>
                                 <span id="percentage_1"></span>%
                             </section>
