--- a/vaga.html
+++ b/vaga.html
@@ -13,25 +13,20 @@
 <body>
   <header>
     <!--navegação - NAV-->
-
-    <nav class="navbar navbar-expand-lg ">
-      <div class="container-fluid  ">
-        <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon "></span>
-        </button>
-        <div class="collapse rounded navbar-collapse justify-content-center " id="navbarNavAltMarkup">
-          <div class="navbar-nav justify-content-center rounded-pill">
-            <a class="nav-link " aria-current="page" href="./inicio.html">Inicio</a>
-            <a class="nav-link active " href="./vagas.html">Vagas</a></a>
+    <div class="navbar-box">
+      <nav class="navbar">
+        <div class="navbar-container">
+          <div class="navbar-links">
+            <a class="nav-link" href="./inicio.html">Inicio</a>
+            <a class="nav-link active" href="./vagas.html">Vagas</a>
             <a class="nav-link" href="./perfil.html">Perfil</a>
           </div>
         </div>
-      </div>
-    </nav>
-    <div class="header-text  ">
+      </nav>
+   </div>
+    <!-- <div class="header-text  ">
       <p id="nickname" class="nickname">Nickname User</p>
-    </div>
+    </div> -->
   </header>
   <main>
 
