--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/img/icons/icone_12.ico" type="image/x-icon">
     <link href="./css/login.css" rel=stylesheet>
     <title>login Profissionalize-se</title>
 </head>
