--- a/vaga.html
+++ b/vaga.html
@@ -6,11 +6,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/vagas.css" ">
+  <link rel="icon" href="/img/icons/icone_1.ico" type="image/x-icon">
+  <link rel="stylesheet" href="./css/vagas.css">
+   <!-- Linkando o Google Fonts para os icones -->
+   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0"/>
+   <link rel="stylesheet" href="css/chatbot.css">
   <title>Vagas Profissionaliza-se</title>
 </head>
 
 <body>
+    <div class="juju">
+      <button id="chatbot-toggler">
+          <span class="material-symbols-rounded">mode_comment</span>
+          <span class="material-symbols-rounded">close</span>
+      </button>
+      <div class="chatbot-popup">
+          <!-- Chatbot Header -->
+          <div class="chat-header">
+              <div class="header-info">
+                  <div class="chatbot-logo">
+                      <img class="chatbot-logo" src="./img/icons/juju.jpeg" width="50" height="50" alt="icone da juju">
+                  </div>     
+                  <h2 class="logo-text">Juju</h2>
+              </div>
+              <button id="close-chatbot" class="material-symbols-rounded">
+                  keyboard_arrow_down
+              </button>
+          </div>
+          <!-- Chatbot Body -->
+          <div class="chat-body">
+              <div class="message bot-message">
+                  <div class="bot-avatar">
+                      <img class="bot-avatar" src="./img/icons/juju.jpeg" width="50" height="50" alt="icone da juju">
+                  </div> 
+                  <div class="message-text">Olá, eu sou a Juju!<br>
+                  Em que posso ajudar?</div>
+              </div>
+          </div>
+          <!-- Chatbot Footer -->
+          <div class="chat-footer">
+              <form action="#" class="chat-form">
+                  <textarea placeholder="Digite uma mensagem..." class="message-input" required></textarea>
+                  <div class="chat-controls">
+                      <button type="button" id="emoji-picker" class="material-symbols-outlined">sentiment_satisfied</button>
+                      <div class="file-upload-wrapper">
+                          <input type="file" accept="images/*" id="file-input" hidden>
+                          <img src="#">
+                          <button type="button" id="file-upload" class="material-symbols-rounded">attach_file</button>
+                          <button type="button" id="file-cancel" class="material-symbols-rounded">close</button>
+                      </div>
+                      <button type="submit" id="send-message" class="material-symbols-rounded">arrow_upward</button>
+                  </div>
+              </form>
+          </div>
+      </div>
+      <!-- Linkando os emojis para o chat -->
+      <script src="https://cdn.jsdelivr.net/npm/emoji-mart@latest/dist/browser.js"></script>
+      <script src="js/chatbot.js"></script>
+  </div>
   <header>
     <!--navegação - NAV-->
     <div class="navbar-box">
