--- a/inicio.html
+++ b/inicio.html
@@ -23,7 +23,7 @@
         </section>
         <section class="section-2">
             <div class="sec2-up">
-                <h2 class="sec2-text"> Algums Profissionais</h2>
+                <h2 class="sec2-text"> depoimento de profissionais </h2>
             </div>
             <div class="sec2-center">
                 <div class="card">
