Atualizar o inicio.html

--- a/inicio.html
+++ b/inicio.html
@@ -44,7 +44,9 @@
                         </div>
                         <div class="backend">
                             <h3>Feedback</h3>
-                            <p>um texo aguardando...</p> 
+                            <p>O "Profissionalize-se" é maravilhoso! O teste vocacional é super útil e a simulação 
+de entrevista com IA ajuda bastante. Além disso, o site é bem fácil de usar. Perfeito 
+pra quem quer dar um up no mercado de trabalho</p> 
                         </div>
                     </div>
                 </div>
