algumas coisas que ninguem ver

--- a/perfil.html
+++ b/perfil.html
@@ -13,7 +13,7 @@
     <title>perfil Profissionalize-se</title>
 </head>
 
-<body>
+<body class="body">
     <div class="juju">
         <button id="chatbot-toggler">
             <span class="material-symbols-rounded">mode_comment</span>
@@ -80,7 +80,7 @@
             </nav>
         </div>
     </header>
-    <main id="main">
+    <main >
        
         <div class="div-main">
             <section class="section-1">
@@ -106,31 +106,31 @@
                         </div>
                         <div class="quests-profire">
                             <section class="quest">
-                                <a href="./testevo.html" onclick="setLink(1)">
+                                <a href="./testes.html" onclick="setLink(1)">
                                     <img src="css/img-background/ingles.svg"  alt="imagem das questoes">
                                 </a>
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
-                                <a href="./testevo.html" onclick="setLink(2)">
+                                <a href="./testes.html" onclick="setLink(2)">
                                     <img src="./img/icons/vocacional_icon.svg" alt="imagem das questoes">
                                 </a>
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
-                                <a href="./testevo.html" onclick="setLink(3)">
+                                <a href="./testes.html" onclick="setLink(3)">
                                     <img src="css/img-background/icone_1.svg" alt="imagem das questoes">
                                 </a>
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
-                                <a href="./testevo.html" onclick="setLink(4)">
+                                <a href="./testes.html" onclick="setLink(4)">
                                     <img src="./img/icons/coportamental.svg" alt="imagem das questoes">
                                 </a>
                                 <span id="percentage_1"></span>%
                             </section>
                             <section class="quest">
-                                <a href="./testevo.html" onclick="setLink(5)">
+                                <a href="./testes.html" onclick="setLink(5)">
                                     <img src="./img/icons/teste.svg" alt="imagem das questoes">
                                 </a>
                                 <span id="percentage_1"></span>%
@@ -139,7 +139,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section-3" style="display: none;">
+            <section class="section-3" ">
                 <h1>Formulário de Cadastro</h1>
                 <form id="form-perfil" enctype="multipart/form-data">
 
