--- a/vaga.html
+++ b/vaga.html
@@ -96,14 +96,10 @@
       </div> 
       
       <main id="carousel">
-
- 
-      </div>
         <div class="item" id="section_vaga_recomendada_1"></div>
         <div class="item" id="section_vaga_recomendada_2"></div>
         <div class="item" id="section_vaga_recomendada_3"></div>
-
-      <main>
+      </main>
     
     </section>
 
