carrossel 90% - ta funcionando

--- a/vaga.html
+++ b/vaga.html
@@ -92,11 +92,13 @@
       <div class="carousel-button">
         <button id="arrow_left" onclick="arrowLeft()"><img src="./img/icons/arrow_left.svg" alt=""></button>
         <button id="arrow_star"><img src="./img/icons/favoriteStar_icon.svg" alt=""></button>
-        <button id="arrow_right" onclick="arrowRight()"><img src="./img/icons/arrow_right.svg" alt=""></button>
+        <button id="arrow_right" ><img src="./img/icons/arrow_right.svg" alt=""></button>
       </div> 
       
       <main id="carousel">
-        <div class="item" id="section_vaga_recomendada_1"></div>
+        <div class="item" id="section_vaga_recomendada_1">
+          <h1 style="font-size: 48px;">vagas recomendadas</h1 >
+        </div>
         <div class="item" id="section_vaga_recomendada_2"></div>
         <div class="item" id="section_vaga_recomendada_3"></div>
       </main>
