icon corrigido. agora carrossel desaparece. carrossel favorito add css e html em perfil

--- a/chatbot.html
+++ b/chatbot.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/icons/icone_1.ico" type="image/x-icon">
     <title>Ai Chatbot</title>
     <!-- Linkando o Google Fonts para os icones -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0"/>
