--- a/politica.html
+++ b/politica.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/icons/icone_1.ico" type="image/x-icon">
+    <link rel="icon" href="./img/icons/icone_1.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/termopolitica.css">
     <title>Política de Privacidade</title>
 </head>
