--- a/inicio.html
+++ b/inicio.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="./img/icons/icone_1.ico" type="image/x-icon">
     <link href="./css/inicio.css" rel="stylesheet">
  
-    <title>Inicio Profissionalize-se</title>
+    <title>Inicio</title>
  </head>
  <body>
     
@@ -20,11 +20,11 @@
                 <h1>Profissionalize-se</h1>
                 <h3>Transforme seu futuro!</h3>
             </div>
-            <a class="button-login" href="./login.html" >Candidatar-se</a>
+            <a class="button-login" href="./login.html">Candidatar-se</a>
         </section>
         <section class="section-2">
             <div class="sec2-up">
-                <h2 class="sec2-text"> depoimento de profissionais </h2>
+                <h2 class="sec2-text">Transformando vidas e construindo uma jornada sucesso para vocês!</h2>
             </div>
             <div class="sec2-center">
                 <div class="card">
@@ -64,7 +64,7 @@ pra quem quer dar um up no mercado de trabalho</p>
                 </div>
             </div>
             <div class="sec2-bottom">
-                <p class="sec2-text"><span id="user_length"><!--user_length-->1739</span> Pessoas que tambem fazem partes</p>
+                <p class="sec2-text"><span id="user_length"><!--user_length-->Já somos 1739 </span>histórias de sucesso!</p>
             </div>
         </section>
         <section class="section-3">
@@ -74,7 +74,7 @@ pra quem quer dar um up no mercado de trabalho</p>
                     <button class="buttom-select">Quem Somos</button>
                     <h3 id="us_h3">
                         Somos uma plataforma inovadora dedicada a capacitar jovens profissionais para os desafios do mercado de trabalho.
-                        Nosso objetivo é oferecer conteúdo de qualidade, com cursos, treinamentos e recursos práticos que ajudam jovens a se destacarem em suas carreiras desde o início.
+                        Nosso objetivo é oferecer conteúdo de qualidade como: cursos, treinamentos e recursos práticos que ajudam jovens a se destacarem em suas carreiras desde o início.
                         Nossa equipe é formada por profissionais experientes de diversas áreas, unidos pelo compromisso de preparar a nova geração para alcançar seu potencial máximo. 
                     </h3>
                 </div>
