--- a/inicio.html
+++ b/inicio.html
@@ -24,7 +24,7 @@
         </section>
         <section class="section-2">
             <div class="sec2-up">
-                <h2 class="sec2-text">Transformando vidas e construindo uma jornada sucesso para vocês!</h2>
+                <h2 class="sec2-text">Transformando vidas e construindo uma jornada sucesso para você!</h2>
             </div>
             <div class="sec2-center">
                 <div class="card">
