dhgsf srt sim m3e4nikikikk aaaa

--- a/login.html
+++ b/login.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="icon" href="./img/icons/icone_12.ico" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+ 
+    
+
     <link href="./css/login.css" rel=stylesheet>
     <title>login Profissionalize-se</title>
 </head>
@@ -22,11 +30,11 @@
                     <form >
                         <div class="form">
                             <label>E-mail/CPF:</label>
-                            <input type="email" id="email" minlength="6" maxlength="60" alt="digite o seu e-mail ou CPF" required><br>
+                            <input type="email" id="email" minlength="6" maxlength="60" alt="digite o seu e-mail ou CPF" required/><br>
                         </div>
                         <div class="form">
                             <label>Senha:</label>
-                            <input type="password" id="senha" minlength="6" maxlength="20" alt="Digite a sua senha">
+                            <input type="password" id="senha" minlength="6" maxlength="20" alt="Digite a sua senha"/>
                         </div>
                      </form>
                      <div class="link-redefinir">
