--- a/inicio.html
+++ b/inicio.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="backend">
                             <h3>Feedback</h3>
-                            <p>um texto aguardando...</p> 
+                            <p>Um ótimo site,Tem uma estrutura boa e fácil acess.</p> 
                         </div>
                     </div>
                 </div>
@@ -57,7 +57,7 @@ pra quem quer dar um up no mercado de trabalho</p>
                 <div class="card">
                     <div class="flip">
                         <div class=" card-3 frondend">
-                            <h3>Quezia dos Santos</h3>
+                            <h3>Quezia Santos</h3>
                         </div>
                         <div class="backend">
                             <h3>Feedback</h3>
