--- a/testes.html
+++ b/testes.html
@@ -9,6 +9,10 @@
     
 </head>
 <body>
+    <a class="return" draggable="false" onclick="window.history.back()" >
+        <img draggable="false" src="img/icons/return_icon.svg" alt="botão para voltar" />
+    </a>
+
     <div class="quest-container">
         <h1>Quiz</h1>
         <h2>Para te conhecermos melhor:</h2>
