--- a/vaga.html
+++ b/vaga.html
@@ -89,7 +89,7 @@
       <input type="radio" name="position" id="Cradio_1"/>
       <input type="radio" name="position" id="Cradio_2"/>
       <input type="radio" name="position" id="Cradio_3"/>
-
+      <input type="radio" name="position" id="Cradio_4"/>
       <main id="carousel">
         <div class="item" id="section_vaga_recomendada_1">
           <h1 style="font-size: 48px;">vagas recomendadas</h1 >
