Reload de perfil

--- a/inicio.html
+++ b/inicio.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./img/icons/icone_1.ico" type="image/x-icon">
     <link href="./css/inicio.css" rel="stylesheet">
  
-    <title>Inicio</title>
+    <title>Início</title>
  </head>
  <body>
     
