--- a/perfil.html
+++ b/perfil.html
@@ -10,7 +10,7 @@
     <!-- Linkando o Google Fonts para os icones -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0"/>
     <link rel="stylesheet" href="css/chatbot.css">
-    <title>perfil Profissionalize-se</title>
+    <title>Perfil</title>
 </head>
 
 <body class="body">
@@ -91,7 +91,7 @@
             <section class="section-2">
                 <div class="sec2-top">
                     <div class="profile-title">
-                        <h2 id="nickname_text" class="nickname-text">nickname</h2>
+                        <h2 id="nickname_text" class="nickname-text"></h2>
                         <button onclick="editprofile()">
                             <img src="./img/icons/paintBrush_icon.svg">
                         </button>
