--- a/redefinir.html
+++ b/redefinir.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/icons/icone_1.ico" type="image/x-icon">
     <link href="./css/redefinir.css" rel="stylesheet">
-    <title>redefinir Profissionalize-se</title>
+    <title>Redefinir</title>
 </head>
 <body>
     <main>
