--- a/cadastro.html
+++ b/cadastro.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Parkinsans:wght@300..800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="icon" href="./img/icons/icone_1.ico" type="image/x-icon">
     <link href="./css/cadastro.css" rel="stylesheet">
-    <title>Cadastro Profissionaliza-se</title>
+    <title>Cadastro</title>
 </head>
 <body>
     <main>
