--- a/testes.html
+++ b/testes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/icons/icone_1.ico" type="image/x-icon">
     <link href="./css/testes.css" rel="stylesheet">
-    <title>teste</title>
+    <title>Teste</title>
     
 </head>
 <body>
