--- a/vaga.html
+++ b/vaga.html
@@ -11,7 +11,7 @@
    <!-- Linkando o Google Fonts para os icones -->
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0"/>
    <link rel="stylesheet" href="css/chatbot.css">
-  <title>Vagas Profissionaliza-se</title>
+  <title>Vagas</title>
 </head>
 
 <body >
