--- a/inicio.html
+++ b/inicio.html
@@ -23,7 +23,7 @@
                 <h1>Profissionalize-se</h1>
                 <h3>Transforme seu futuro!</h3>
             </div>
-            <a class="button-login" href="./login.html">Candidatar-se</a>
+            <a class="button-login" href="./login.html">Entrar</a>
         </section>
         <section class="section-2">
             <div class="sec2-up">
